# MasterProject

./: .gitignore  CMakeLists.txt  TODO
Eigen/: CMakeLists.txt
Network/: CMakeLists.txt  Network.cpp  Network.h
Network/ANN/: ANN.cpp  ANN.h  CMakeLists.txt  Dense.cpp  Dense.h  Filter.cpp  Filter.h  Layer.h  activation_functions.cpp  activation_functions.h
Network/Neuron/: CMakeLists.txt  CurrentGenerator.cpp  CurrentGenerator.h  Izhikevich.cpp  Izhikevich.h  LIF.cpp  LIF.h  Neuron.h  PassThrough.cpp  PassThrough.h  SignalGenerator.cpp  SignalGenerator.h  iaf_psc_alpha.cpp  iaf_psc_alpha.h
Network/Population/: ArtificialPopulation.cpp  ArtificialPopulation.h  CMakeLists.txt  Population.cpp  Population.h  SpikingPopulation.cpp  SpikingPopulation.h
Network/Synapse/: BSA_SpikeDecodingSynapse.cpp  BSA_SpikeDecodingSynapse.h  BSA_SpikeEncodingSynapse.cpp  BSA_SpikeEncodingSynapse.h  CMakeLists.txt  LatencyDecodingSynapse.cpp  LatencyDecodingSynapse.h  LatencyEncodingSynapse.cpp  LatencyEncodingSynapse.h  RateCodingSynapse.cpp  RateCodingSynapse.h  ReceptiveFieldDecodingSynapse.cpp  ReceptiveFieldDecodingSynapse.h  ReceptiveFieldEncodingSynapse.cpp  ReceptiveFieldEncodingSynapse.h  StaticSynapse.cpp  StaticSynapse.h  Synapse.cpp  Synapse.h  TemporalPhaseDecodingSynapse.cpp  TemporalPhaseDecodingSynapse.h  TemporalPhaseEncodingSynapse.cpp  TemporalPhaseEncodingSynapse.h
Network/utils/: CMakeLists.txt  Clock.cpp  Clock.h  Event.h  FIR.cpp  FIR.h  Logging.cpp  Logging.h  Parameters.h  helperFunctions.h
Plotting/: FirFilters.py  RNN_FIR.py  RNN_Filtering.py  SineWave.py  circle.py  datasetMNIST.py  firFilterDesign.py  gaussianReceptiveFields.py  generateDatasetMNIST.py  iris.csv  mnist_test.txt  mnist_train.csv  mnist_train.txt  phaseEncoding.py  playground.py  plotCPG.py  plotNeuronActivity.py  plotRateCoding.py  sineWaveReceptiveFields.py  sineWaves.py  visualizeDatasetMNIST.py
Plotting/Results/: IRIS_ANN_Results.py  IRIS_ANN_Results.txt  Logic_AND_ANN_Results.py  Logic_AND_ANN_Results.txt  Logic_OR_ANN_Results.py  Logic_OR_ANN_Results.txt  Logic_XOR_ANN_Results.py  Logic_XOR_ANN_Results.txt  MNIST_ANN_Results.py  MNIST_ANN_Results_1.txt  MNIST_ANN_Results_2.txt  MNIST_ANN_Results_3.txt  Ten_To_One_Neuron_SNN_Results.py  gaussianReceptiveFields.py  gaussianReceptiveFieldscopy.py  gaussianReceptiveFieldscopycopy.py
Plotting/Results/BSA_Encode_Decode_Results/: BSA_Encode_Decode_Example_Results.py  BSA_Encode_Decode_Plot_Results.py  BSA_Encode_Decode_RMSE_Results.py
Plotting/Results/BSA_Filter_Results/: BSA_Filter_Results.py  BSA_RMSE_Results.py  event.csv  value_dt_0.0001.csv  value_dt_0.001.csv  value_dt_0.01.csv
Plotting/Results/BSA_Sine_Lowpass_Results/: BSA_Sine_Lowpass_Results.py  BSA_Sine_Lowpass_Results_Old.py  event.csv
Plotting/Results/Coding_Spiking_Example/: Latency_Coding_Spiking_Example.py  Phase_Coding_Spiking_Example.py  Population_Latency_Coding_Spiking_Example.py  Rate_Coding_Spiking_Example.py
Plotting/Results/Latency_Coding_Encode_Decode_Results/: Latency_Coding_Encode_Decode_Plot_Results.py  Latency_Coding_Encode_Decode_RMSE_Results.py
Plotting/Results/Latency_Coding_Example/: Latency_Coding_Example.py
Plotting/Results/Latency_Coding_Lowpass_Example/: Latency_Coding_Lowpass_Example.py  event.csv
Plotting/Results/Latency_Coding_Sine_Lowpass_Results/: Latency_Coding_Sine_Lowpass_Results.py
Plotting/Results/Nest_One_IAF_SNN_Results/: Nest_One_IAF_SNN_Results.py  Nest_output.csv  event.csv  value.csv
Plotting/Results/Nest_Ten_To_One_IAF_SNN_Results/: Nest_Ten_To_One_IAF_SNN_Results.py  event.csv  ten_to_one_neuron_output.csv  value.csv
Plotting/Results/PerformanceTest/: PerformanceTest.py  non-spiking-execution-times.json  spiking-execution-times.json
Plotting/Results/Phase_Coding_Encode_Decode_Results/: Phase_Coding_Encode_Decode_Plot_Results.py  Phase_Coding_Encode_Decode_RMSE_Results.py
Plotting/Results/Phase_Coding_Example/: Phase_Coding_Example.py
Plotting/Results/Phase_Coding_Lowpass_Example/: Phase_Coding_Lowpass_Example.py
Plotting/Results/Phase_Coding_Sine_Lowpass_Results/: Phase_Coding_Sine_Lowpass_Results.py
Plotting/Results/Population_Latency_Coding_Example/: Population_Latency_Coding_Example.py
Plotting/Results/Population_Latency_Coding_Lowpass_Example/: Population_Latency_Coding_Lowpass_Example.py
Plotting/Results/Population_Latency_Coding_Lowpass_Example copy/: Population_Latency_Coding_Lowpass_Example.py
Plotting/Results/Population_Latency_Coding_Sine_Lowpass_Results/: Population_Latency_Coding_Sine_Lowpass_Results.py
Plotting/Results/Rate_Coding_Encode_Decode_Reults/: Rate_Coding_Encode_Decode_Reults.py
Plotting/Results/Rate_Coding_Example/: Rate_Coding_Example.py
Plotting/Results/Rate_Coding_Lowpass_Example/: Rate_Coding_Lowpass_Example.py
Plotting/Results/Rate_Coding_Synchronized_IAF_SNN_Reults/: Rate_Coding_Synchronized_IAF_SNN_Reults.py
Test/: BSA_Encode_Decode_Results.cpp  BSA_Encode_Decode_Unique_Results.cpp  BSA_Filter_Results.cpp  BSA_Sine_Lowpass_Results.cpp  CMakeLists.txt  Latency_Coding_Encode_Decode_Results.cpp  Latency_Coding_Example.cpp  Latency_Coding_Lowpass_Example_Results.cpp  Latency_Coding_Sine_Lowpass_Results.cpp  Nest_One_IAF_SNN_Results.cpp  Nest_Ten_To_One_IAF_SNN_Results.cpp  NonSpikingNeuronPerformanceTest.cpp  Phase_Coding_Encode_Decode_Results.cpp  Phase_Coding_Lowpass_Example_Results.cpp  Phase_Coding_Sine_Lowpass_Results.cpp  Population_Latency_Coding_Lowpass_Example_Results.cpp  Population_Latency_Coding_Sine_Lowpass_Results.cpp  Rate_Coding_Encode_Decode_Results.cpp  Rate_Coding_Lowpass_Example_Results.cpp  Rate_Coding_Synchronized_IAF_SNN_Results.cpp  Receptive_Field_Coding_Encode_Decode_Results.cpp  Results-ANN-IRIS-Training.cpp  Results-ANN-Logic-Training.cpp  Results-ANN-MNIST-Training.cpp  SpikingNeuronPerformanceTest.cpp  Ten_To_One_Neuron_SNN_Results.cpp  decodeEncodeTest.cpp  main.cpp  networkTest.cpp  neuronTest.cpp  populationTest.cpp  rateCodingTest.cpp  sineWaveReceptiveFields.cpp  sineWaveTemporalCoding.cpp  sineWaveTest.cpp  spikingCPG.cpp
(+2 files in other folders)
