add_executable (annTest main.cpp)
add_executable (neuronTest neuronTest.cpp)
add_executable (networkTest networkTest.cpp)
add_executable (populationTest populationTest.cpp)
add_executable (rateCodingTest rateCodingTest.cpp)
add_executable (sineWaveTest sineWaveTest.cpp)
add_executable (decodeEncodeTest decodeEncodeTest.cpp)

target_link_libraries (annTest Network)
target_link_libraries (neuronTest Network)
target_link_libraries (networkTest Network)
target_link_libraries (populationTest Network)
target_link_libraries (rateCodingTest Network)
target_link_libraries (sineWaveTest Network)
target_link_libraries (decodeEncodeTest Network)