add_executable (annTest main.cpp)
add_executable (neuronTest neuronTest.cpp)
add_executable (networkTest networkTest.cpp)
add_executable (populationTest populationTest.cpp)
add_executable (rateCodingTest rateCodingTest.cpp)
add_executable (sineWaveTest sineWaveTest.cpp)
add_executable (decodeEncodeTest decodeEncodeTest.cpp)
add_executable (sineWaveTemporalCoding sineWaveTemporalCoding.cpp)
add_executable (spikingCPG spikingCPG.cpp)
add_executable (sineWaveReceptiveFields sineWaveReceptiveFields.cpp)
add_executable (Results-ANN-MNIST-Training Results-ANN-MNIST-Training.cpp)
add_executable (Results-ANN-IRIS-Training Results-ANN-IRIS-Training.cpp)
add_executable (Results-ANN-Logic-Training Results-ANN-Logic-Training.cpp)
add_executable (Ten_To_One_Neuron_SNN_Results Ten_To_One_Neuron_SNN_Results.cpp)
add_executable (Nest_One_IAF_SNN_Results Nest_One_IAF_SNN_Results.cpp)
add_executable (Nest_Ten_To_One_IAF_SNN_Results Nest_Ten_To_One_IAF_SNN_Results.cpp)
add_executable (Rate_Coding_Synchronized_IAF_SNN_Results Rate_Coding_Synchronized_IAF_SNN_Results.cpp)
add_executable (Rate_Coding_Encode_Decode_Results Rate_Coding_Encode_Decode_Results.cpp)
add_executable (BSA_Sine_Lowpass_Results BSA_Sine_Lowpass_Results.cpp)
add_executable (BSA_Filter_Results BSA_Filter_Results.cpp)
add_executable (BSA_Encode_Decode_Results BSA_Encode_Decode_Results.cpp)
add_executable (BSA_Encode_Decode_Unique_Results BSA_Encode_Decode_Unique_Results.cpp)
add_executable (Phase_Coding_Encode_Decode_Results Phase_Coding_Encode_Decode_Results.cpp)
add_executable (Latency_Coding_Encode_Decode_Results Latency_Coding_Encode_Decode_Results.cpp)
add_executable (Receptive_Field_Coding_Encode_Decode_Results Receptive_Field_Coding_Encode_Decode_Results.cpp)
add_executable (Latency_Coding_Sine_Lowpass_Results Latency_Coding_Sine_Lowpass_Results.cpp)
add_executable (Phase_Coding_Sine_Lowpass_Results Phase_Coding_Sine_Lowpass_Results.cpp)
add_executable (Population_Latency_Coding_Sine_Lowpass_Results Population_Latency_Coding_Sine_Lowpass_Results.cpp)
add_executable (Latency_Coding_Example Latency_Coding_Example.cpp)
add_executable (Latency_Coding_Lowpass_Example_Results Latency_Coding_Lowpass_Example_Results.cpp)



target_link_libraries (annTest Network)
target_link_libraries (neuronTest Network)
target_link_libraries (networkTest Network)
target_link_libraries (populationTest Network)
target_link_libraries (rateCodingTest Network)
target_link_libraries (sineWaveTest Network)
target_link_libraries (decodeEncodeTest Network)
target_link_libraries (sineWaveTemporalCoding Network)
target_link_libraries (spikingCPG Network)
target_link_libraries (sineWaveReceptiveFields Network)
target_link_libraries (Results-ANN-MNIST-Training Network)
target_link_libraries (Results-ANN-IRIS-Training Network)
target_link_libraries (Results-ANN-Logic-Training Network)
target_link_libraries (Ten_To_One_Neuron_SNN_Results Network)
target_link_libraries (Nest_One_IAF_SNN_Results Network)
target_link_libraries (Nest_Ten_To_One_IAF_SNN_Results Network)
target_link_libraries (Rate_Coding_Synchronized_IAF_SNN_Results Network)
target_link_libraries (Rate_Coding_Encode_Decode_Results Network)
target_link_libraries (BSA_Sine_Lowpass_Results Network)
target_link_libraries (BSA_Filter_Results Network)
target_link_libraries (BSA_Encode_Decode_Results Network)
target_link_libraries (BSA_Encode_Decode_Unique_Results Network)
target_link_libraries (Phase_Coding_Encode_Decode_Results Network)
target_link_libraries (Latency_Coding_Encode_Decode_Results Network)
target_link_libraries (Receptive_Field_Coding_Encode_Decode_Results Network)
target_link_libraries (Latency_Coding_Sine_Lowpass_Results Network)
target_link_libraries (Phase_Coding_Sine_Lowpass_Results Network)
target_link_libraries (Population_Latency_Coding_Sine_Lowpass_Results Network)
target_link_libraries (Latency_Coding_Example Network)
target_link_libraries (Latency_Coding_Lowpass_Example_Results Network)