add_library (Synapse Synapse.h StaticSynapse.h StaticSynapse.cpp RateCodingSynapse.h RateCodingSynapse.cpp BSA_SpikeEncodingSynapse.h BSA_SpikeEncodingSynapse.cpp TemporalPhaseEncodingSynapse.h TemporalPhaseEncodingSynapse.cpp TemporalPhaseDecodingSynapse.h TemporalPhaseDecodingSynapse.cpp ReceptiveFieldEncodingSynapse.h ReceptiveFieldEncodingSynapse.cpp ReceptiveFieldEncodingSynapse.h ReceptiveFieldEncodingSynapse.cpp ReceptiveFieldDecodingSynapse.h ReceptiveFieldDecodingSynapse.cpp BSA_SpikeDecodingSynapse.h BSA_SpikeDecodingSynapse.cpp LatencyEncodingSynapse.h LatencyEncodingSynapse.cpp LatencyDecodingSynapse.h LatencyDecodingSynapse.cpp)

target_link_libraries(Synapse Network)
